# gins

./: .gitignore  CMakeLists.txt  README.md  main.cpp
errors/: errors.cpp  errors.h
pdata/: data.cpp  data.h
polygon/: data.cpp  data.h  polygon.h
primitives/: point.h
solve/: algo.cpp  algo.h
solve/low/: Low.h
src/: main.cpp
src/pdata/: data.cpp  data.h
src/primitives/: point.h
src/solve/: algo.cpp  algo.h
src/solve/hard/: Hard.cpp  Hard.h
src/solve/hardPlus/: HardPlus.cpp  HardPlus.h
src/solve/low/: Low.cpp  Low.h
src/solve/lowPlus/: LowPlus.cpp  LowPlus.h
src/solve/medium/: medium.cpp  medium.h
src/solve/mediumPlus/: mediumPlus.cpp  mediumPlus.h
src/solve/mediumPlusPlus/: mediumPlusPlus.cpp  mediumPlusPlus.h
test/: main.cpp  point.cpp  simdavx.cpp
